# agents-framework-test

./: .gitignore  README.md  TESTING.md  test_agent_comprehensive.sh  test_docker_local.sh  test_local_python.sh
tech_lead_crew/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LOGGING_METRICS.md  OTEL_SETUP.md  README.md  kagent-byo-manifest.yaml.example  pyproject.toml  test_crew_config.py  test_llm_mcp.py  test_local.py  test_otel_setup.py
tech_lead_crew/src/tech_lead_crew/: agent-card.json  crew.py  main.py
tech_lead_crew/src/tech_lead_crew/config/: agents.yaml  tasks.yaml
tech_lead_langgraph/: .dockerignore  Dockerfile  pyproject.toml  test_local.py
tech_lead_langgraph/src/tech_lead_langgraph/: __init__.py  agent-card.json  graph.py  main.py  mcp_tools.py
