[project]
name = "tech_lead_langgraph"
version = "0.1.0"
description = "LangGraph-based Tech Lead agent (skeleton)"
readme = ""
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.1.0",
    "langchain-openai>=0.2.0",
    "fastmcp>=0.5.0",
    "kagent-langgraph>=0.7.6",  # KAgent integration for LangGraph
    "anthropic>=0.40.0",  # Required by kagent-langgraph (imported at module level)
    "google-genai>=0.2.0",  # Required by kagent-langgraph (imported at module level)
    "uvicorn",
    "opentelemetry-instrumentation-langchain",  # LangChain/LangGraph instrumentation
    "opentelemetry-instrumentation-logging",  # Python logging instrumentation
    "opentelemetry-exporter-otlp-proto-http",  # OTLP HTTP exporter for traces/logs
    "opentelemetry-exporter-otlp-proto-grpc",  # OTLP gRPC exporter for metrics
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.kagent]
type = "langgraph"

